# cocytus

./: .gitignore  LICENSE
cocytus/: __init__.py  cocytus.py
cocytus/compiler/: compiler.py
cocytus/weight_converter/: weight_converter.py
doc/QandA/: qa000_最終層の結果が不一致.md
doc/manual/: Makefile  install.md  manual.md
doc/manual/img/: Makefile  (+1 more)
doc/users_guide/: ug000_プロファイルの取り方.md  ug001_neon対応時のデータの並び.md
example/tiny-yolo/: tiny-yolo.ini  tiny-yolo.md  tiny-yolo_fix16.ini  tiny-yolo_fix8.ini  tiny-yolo_neon.ini  tiny-yolo_sdsoc.ini  tiny-yolo_sdsoc_fp16.ini  tiny-yolo_zynq.ini
example/tiny-yolo/c/: CMakeLists.txt  cqt_tyolo.c  tyolo_debug.c  ya2k_yolo.h  yad2k_yolo.c
example/tiny-yolo/c/cqt_gen/: cqt_debug.c  cqt_debug.h  cqt_gen.c  cqt_gen.h
example/tiny-yolo/c/cqt_lib/: BatchNormalization.c  Conv2d_same_1x1.c  Conv2d_same_3x3.c  InputLayer.c  MaxPooling2D.c  cqt_lib.c  numpy.c
example/tiny-yolo/c/inc/: cqt.h  cqt_lib.h  cqt_net.h
example/tiny-yolo/c_neon/: CMakeLists.txt  cqt_tyolo.c  ya2k_yolo.h  yad2k_yolo.c
example/tiny-yolo/c_neon/cqt_gen/: cqt_debug.c  cqt_debug.h  cqt_gen.c  cqt_gen.h
example/tiny-yolo/c_neon/cqt_lib/: BatchNormalization.c  Conv2d_same_1x1.c  Conv2d_same_3x3.c  InputLayer.c  LeakyReLU.c  MaxPooling2D.c
example/tiny-yolo/c_neon/for_neon/: Conv2d_same_3x3.c
example/tiny-yolo/c_neon/inc/: cqt.h  cqt_lib.h  cqt_net.h
example/vgg16/: vgg16.ini  vgg16.md  vgg16_fix.ini  vgg16_fp16.ini
example/vgg16/c/: CMakeLists.txt  cqt_vgg16.c  vgg16_debug.c
example/vgg16/c/cqt_gen/: cqt_gen.c  cqt_gen.h
example/vgg16/c/cqt_lib/: Conv2d_same_3x3.c  Dense.c  Flatten.c  MaxPooling2D.c  cqt_lib.c  numpy.c
example/vgg16/c/inc/: cqt.h  cqt_keras.h  cqt_lib.h
example/yolo-pico/: yolo-pico_fix16.ini
test/python/: Makefile
tools/cqt_diff/: cqt_diff.py  cqt_diff_vgg16.py  cqt_diff_yolo.py  cqt_diff_yolo_fix.py  cqt_diff_yolo_neon.py
(+183 files in other folders)
